
The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/abcrypt-cli-v0.3.3\...HEAD[Unreleased]

=== Added

* Supports the abcrypt version 1 file format ({pull-request-url}/619[#619])
* Add `argon2` command to get the Argon2 context ({pull-request-url}/619[#619])

=== Removed

* Remove the abcrypt version 0 file format support
  ({pull-request-url}/619[#619])

== {compare-url}/abcrypt-cli-v0.3.2\...abcrypt-cli-v0.3.3[0.3.3] - 2024-08-04

=== Changed

* Change `--passphrase-from-env` to take an UTF-8 string as an environment
  variable key ({pull-request-url}/531[#531])

== {compare-url}/abcrypt-cli-v0.3.1\...abcrypt-cli-v0.3.2[0.3.2] - 2024-04-17

=== Changed

* Change to remove unnecessary files from the book
  ({pull-request-url}/382[#382])

== {compare-url}/abcrypt-cli-v0.3.0\...abcrypt-cli-v0.3.1[0.3.1] - 2024-04-16

=== Added

* Add man page for the format specification ({pull-request-url}/369[#369])

=== Changed

* Update examples in man pages

== {compare-url}/abcrypt-cli-v0.2.12\...abcrypt-cli-v0.3.0[0.3.0] - 2024-02-18

=== Changed

* Bump MSRV to 1.74.0 ({pull-request-url}/272[#272])
* Rename Argon2 parameters ({pull-request-url}/275[#275])
* Rename `--memory-size` to `--memory-cost` ({pull-request-url}/275[#275])
* Rename `--iterations` to `--time-cost` ({pull-request-url}/275[#275])

== {compare-url}/abcrypt-cli-v0.2.11\...abcrypt-cli-v0.2.12[0.2.12] - 2024-01-21

=== Changed

* Add description about behavior of `-h`, `--help` and `--version` in man pages
  ({pull-request-url}/234[#234])

== {compare-url}/abcrypt-cli-v0.2.10\...abcrypt-cli-v0.2.11[0.2.11] - 2024-01-18

=== Changed

* Remove last blank line of `--version` ({pull-request-url}/225[#225])

== {compare-url}/abcrypt-cli-v0.2.9\...abcrypt-cli-v0.2.10[0.2.10] - 2024-01-07

=== Changed

* Reduce the target architecture and the archive format for pre-built binaries