@@ -13,7 +13,6 @@ fn generate_man_page(out_dir: &str) -> io::Result<ExitStatus> {
     let mut command = Command::new("asciidoctor");
     command
         .args(["-b", "manpage"])
-        .args(["-a", concat!("revnumber=", env!("CARGO_PKG_VERSION"))])
         .args(["-D", out_dir])
         .arg(man_dir.join("*.3.adoc"))
         .status()
