@@ -12,12 +12,11 @@ fn generate_man_page(out_dir: &str) -> io::Result<ExitStatus> {
     let mut command = Command::new("asciidoctor");
     command
         .args(["-b", "manpage"])
-        .args(["-a", concat!("revnumber=", env!("CARGO_PKG_VERSION"))]);
-    #[cfg(feature = "json")]
-    command.args(["-a", "json"]);
-    command
         .args(["-D", out_dir])
-        .args([man_dir.join("man1/*.1.adoc"), man_dir.join("man5/*.5.adoc")])
+        .args([
+            man_dir.join("man1/*.1.adoc"),
+            man_dir.join("man5/abcrypt.5.adoc"),
+        ])
         .status()
 }
 
