@@ -5,9 +5,9 @@
 = ABCRYPT_TAG_SIZE(3)
 // Specify in UTC.
 :docdate: 2024-04-16
+:revnumber: 0.3.2
 :doctype: manpage
-ifdef::revnumber[:mansource: abcrypt-capi {revnumber}]
-ifndef::revnumber[:mansource: abcrypt-capi]
+:mansource: abcrypt-capi {revnumber}
 :manmanual: Library Functions Manual
 ifndef::site-gen-antora[:includedir: ./include]
 
